[gd_scene load_steps=8 format=2]

[ext_resource path="res://vehicles/vehicle.tscn" type="PackedScene" id=1]
[ext_resource path="res://vehicles/meshes/vehicles_mrl_launcher.mesh" type="ArrayMesh" id=2]
[ext_resource path="res://vehicles/meshes/vehicles_mrl.mesh" type="ArrayMesh" id=3]
[ext_resource path="res://vehicles/mrl.gd" type="Script" id=4]
[ext_resource path="res://sounds/launcher.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape" id=1]
radius = 0.555848
height = 1.32881

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.601604, 0.7, 1.29308 )

[node name="MRL" instance=ExtResource( 1 )]
script = ExtResource( 4 )
points = 100
level = 2
can_attack = true
attack_rate = 2.0

[node name="Mesh" parent="Origin" index="0"]
mesh = ExtResource( 3 )

[node name="LauncherMesh" type="MeshInstance" parent="Origin" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.3 )
mesh = ExtResource( 2 )
skeleton = NodePath("../..")

[node name="FirePosition" type="Position3D" parent="Origin/LauncherMesh" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.35, -1.3 )

[node name="CollisionShape" parent="." index="1"]
shape = SubResource( 1 )

[node name="CollisionShape" parent="Hitbox" index="0"]
shape = SubResource( 2 )

[node name="ShootSound" type="AudioStreamPlayer3D" parent="." index="7"]
stream = ExtResource( 5 )
unit_db = -5.0
unit_size = 25.0
bus = "SFX"
attenuation_filter_cutoff_hz = 20500.0
